# retail-store-device-map

./: .gitignore  LLM_SETUP_GUIDE.md  VISUALIZER_GUIDE.md  check_progress.py  debug_image.py  extract_store_mappings.py  main.py  pyproject.toml  requirements.txt  test_llm_extraction.py  test_sample.py  visualizer.py
templates/: index.html
